--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "ISC"
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
